feat: integrate ng-icons for no internet component and add loading component
- Added ng-icons/core and ng-icons/material-icons dependencies to package.json and package-lock.json.
- Updated no-internet.component.html to use ng-icon for better UI representation.
- Enhanced no-internet.component.ts to emit retry events.
- Modified welcome-page.component.html to handle new loading and gptToken components.
- Implemented loading.component with SVG spinner animation.
- Created loading.component.spec.ts for unit testing the loading component.
- Added installation.service.ts for online status checking.
- Updated main.ts to include ipcMain for future IPC communication.

--- a/src/app/pages/welcome-page/welcome-page.component.html
+++ b/src/app/pages/welcome-page/welcome-page.component.html
@@ -1,4 +1,5 @@
-<div class="bg-blue-400 text-white h-screen flex flex-col items-center justify-center">
+<div class=" text-white h-screen flex flex-col items-center justify-center" 
+     [ngClass]="backgroundColor">
 
     @switch (currentView) {
         @case ('welcome'){
@@ -7,8 +8,14 @@
         @case ('folderSelection'){
             <app-folder-selection></app-folder-selection>
         }
+        @case ('gptToken') {
+            <app-gpt-token></app-gpt-token>
+        }
         @case ('noInternet'){
-            <app-no-internet></app-no-internet>
+            <app-no-internet (retry)="startInstallation()"></app-no-internet>
+        }
+        @case ('loading') {
+            <app-loading></app-loading>
         }
         @default{
             <app-welcome></app-welcome>
