--- a/src/app/comps/no-internet/no-internet.component.html
+++ b/src/app/comps/no-internet/no-internet.component.html
@@ -1,1 +1,9 @@
-<p>no-internet works!</p>
+<div class="text-center">
+
+    <ng-icon name="matSignalWifiConnectedNoInternet4" class="text-6xl mb-4"></ng-icon>
+    <h1 class="text-2xl font-bold mb-4">No Internet Connection</h1>
+    <p class="text-lg">Please check your internet connection and try again.</p>
+    <button class="mt-4 px-6 py-2 bg-white text-red-400 rounded hover:bg-gray-200 cursor-pointer"
+        (click)="retryConnection()">Retry</button>
+
+</div>
