--- a/src/app/comps/installation-completed/installation-completed.component.html
+++ b/src/app/comps/installation-completed/installation-completed.component.html
@@ -1,1 +1,9 @@
-<p>installation-completed works!</p>
+<div class="text-center">
+
+    <ng-icon name="matTaskAlt" class="text-6xl mb-4"></ng-icon>
+    <h1 class="text-2xl font-bold mb-4">Installation Completed</h1>
+    <p class="text-lg">Your installation was successful!</p>
+    <button class="mt-4 px-6 py-2 bg-white text-green-400 rounded hover:bg-gray-200 cursor-pointer"
+        (click)="goToDashboard()">Go to Dashboard</button>
+    
+</div>
