--- a/src/app/comps/ffmpeg-installation/ffmpeg-installation.component.html
+++ b/src/app/comps/ffmpeg-installation/ffmpeg-installation.component.html
@@ -1,1 +1,19 @@
-<p>ffmpeg-installation works!</p>
+<div class="flex items-center">
+
+    <app-ffmpeg-icon></app-ffmpeg-icon>
+
+    <h2 class="text-2xl ml-1">
+        FFmpeg Installation
+    </h2>
+
+</div>
+
+<p class="mt-2 text-sm text-white w-sm">
+    To use the application, please first install FFmpeg. You can learn how to install it with this <a
+        class="font-medium underline" target="_blank" href="https://www.youtube.com/watch?v=JR36oH35Fgg">video</a>.
+
+
+</p>
+
+<button (click)="ffmpegInstallation()"
+    class="mt-4 px-4 py-2 bg-white text-blue-400 rounded float-end inline-flex items-center hover:bg-gray-200 cursor-pointer">Retry</button>
