--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,15 @@
-<p>home-page works!</p>
+<div class="bg-blue-400 text-white h-screen flex flex-col items-center justify-center transition duration-300" >
+
+    <h1 class="text-3xl mb-4 font-bold">Transcribe the content</h1>
+
+    <p class="mb-4 text-center w-sm">Please provide the URL or upload the file containing the content you want to transcribe.</p>
+
+    <div class="w-xs border border-gray-300 p-2 mb-4 rounded flex items-center justify-around">
+        <input [(ngModel)]="url" type="text" placeholder="Enter url of the content" class="w-5/6 outline-0 pr-1 border-r" />
+
+        <ng-icon name="matFolder" class="text-center text-2xl "></ng-icon>
+    </div>
+
+    <button (click)="transcribeAudio()" class="bg-white hover:bg-gray-200 cursor-pointer text-blue-400 p-2 rounded w-xs">Transcribe</button>
+
+</div>
