--- a/src/app/comps/folder-selection/folder-selection.component.html
+++ b/src/app/comps/folder-selection/folder-selection.component.html
@@ -12,7 +12,11 @@
     Select the folder where your videos will be stored.
 </p>
 
-<input type="file" [value]="folderPath" webkitdirectory directory class="mt-4 w-sm px-4 py-2 border rounded cursor-pointer"><br>
+<div (click)="saveFolderSelection()" class="mt-4 w-sm px-4 py-2 border rounded cursor-pointer">
+    <div class="text-sm text-white flex items-center">
+        <ng-icon name="matFolder" class="text-center text-2xl mr-2"></ng-icon> <p class="border-l-1 pl-2 ">{{ folderPath }}</p>
+    </div>
+</div>
 
-<button (click)="saveFolderSelection()" class="mt-4 px-4 py-2 bg-white text-blue-400 rounded float-end inline-flex items-center hover:bg-gray-200 cursor-pointer">Next
+<button (click)="nextStep()" class="mt-4 px-4 py-2 bg-white text-blue-400 rounded float-end inline-flex items-center hover:bg-gray-200 cursor-pointer">Next
     <ng-icon class="ml-1" name="matArrowRightAlt"></ng-icon></button>
