feat: Implement content picker and viewer components with basic functionality

--- a/src/app/features/home/home-page/home-page.component.html
+++ b/src/app/features/home/home-page/home-page.component.html
@@ -1,15 +1,19 @@
-<div class="bg-blue-400 text-white h-screen flex flex-col items-center justify-center transition duration-300" >
+<div class="text-white h-screen flex flex-col items-center justify-between transition duration-300"
+    [ngClass]="backgroundColor">
 
-    <h1 class="text-3xl mb-4 font-bold">Transcribe the content</h1>
-
-    <p class="mb-4 text-center w-sm">Please provide the URL or upload the file containing the content you want to transcribe.</p>
-
-    <div class="w-xs border border-gray-300 p-2 mb-4 rounded flex items-center justify-around">
-        <input [(ngModel)]="url" type="text" placeholder="Enter url of the content" class="w-5/6 outline-0 pr-1 border-r" />
-
-        <ng-icon name="matFolder" class="text-center text-2xl "></ng-icon>
+    <div class="w-full p-4">
+        <ng-icon name="matSettings" id="settingsBtn" class="float-end text-3xl cursor-pointer"
+            (mouseenter)="settingsButtonEntered()" (mouseleave)="settingsButtonExited()"></ng-icon>
     </div>
 
-    <button (click)="transcribeAudio()" class="bg-white hover:bg-gray-200 cursor-pointer text-blue-400 p-2 rounded w-xs">Transcribe</button>
+    <div>
+        <app-content-picker id="contentPicker" class="component"></app-content-picker>
+        <app-content-viewer id="contentViewer" class="component"></app-content-viewer>
+    </div>
+
+    <div>
+        <a class="font-medium underline mt-2 text-sm text-white w-sm" target="_blank"
+            href="https://github.com/CesurPolat/DubAI">github.com/CesurPolat/DubAI</a>
+    </div>
 
 </div>
